fixing dark mode issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,13 +7,6 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #efefef;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
